feature: criada pagina de login

--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "@hookform/resolvers": "^2.8.8",
     "@left4code/tw-starter": "^3.1.35",
     "@popperjs/core": "^2.7.0",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.1",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.4",
@@ -34,7 +39,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-hook-form": "^7.29.0",
+    "react-hook-form": "^7.33.1",
     "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.2",
     "recoil": "^0.7.0",
@@ -44,6 +49,7 @@
     "tippy.js": "^6.2.7",
     "toastify-js": "^1.9.3",
     "tom-select": "^1.7.5",
+    "typescript": "^4.7.4",
     "xlsx": "^0.16.9",
     "yup": "^0.32.11",
     "zoom-vanilla.js": "^2.0.6"
