--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
@@ -40,7 +41,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.33.1",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "5.3.3",
     "react-transition-group": "^4.4.2",
     "recoil": "^0.7.0",
     "simplebar": "^5.3.6",
