--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "react-hook-form": "^7.33.1",
     "react-hot-toast": "^2.3.0",
     "react-router-dom": "5.3.3",
+    "react-toastify": "^9.0.7",
     "react-transition-group": "^4.4.2",
     "recoil": "^0.7.0",
     "simplebar": "^5.3.6",
     "tabulator-tables": "^4.9.3",
     "tiny-slider": "^2.9.3",
     "tippy.js": "^6.2.7",
+    "toastify-js": "^1.9.3",
     "tom-select": "^1.7.5",
     "typescript": "^4.7.4",
     "xlsx": "^0.16.9",
