--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/tabulator-tables": "^5.2.0",
     "axios": "^0.27.2",
     "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
