--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@left4code/tw-starter": "^3.1.35",
     "@popperjs/core": "^2.7.0",
     "@types/jest": "^28.1.6",
-    "@types/node": "^18.6.1",
-    "@types/react": "^18.0.15",
+    "@types/node": "^18.7.1",
+    "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/tabulator-tables": "^5.2.0",
@@ -52,7 +52,7 @@
     "tiny-slider": "^2.9.3",
     "tippy.js": "^6.2.7",
     "toastify-js": "^1.9.3",
-    "tom-select": "^1.7.5",
+    "tom-select": "^2.1.0",
     "typescript": "^4.7.4",
     "xlsx": "^0.16.9",
     "yup": "^0.32.11",
@@ -60,6 +60,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.1",
+    "@types/toastify-js": "^1.11.1",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "10.4.6",
     "lodash": "^4.17.21",
