--- a/package.json
+++ b/package.json
@@ -38,15 +38,19 @@
     "litepicker": "^2.0.11",
     "lucide": "^0.17.2",
     "lucide-react": "^0.37.0",
+    "nookies": "^2.5.2",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.33.1",
     "react-hot-toast": "^2.3.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "5.3.3",
+    "react-select": "^5.4.0",
     "react-toastify": "^9.0.7",
     "react-transition-group": "^4.4.2",
     "recoil": "^0.7.0",
+    "remask": "^0.1.0-alpha.5",
     "simplebar": "^5.3.6",
     "tabulator-tables": "^4.9.3",
     "tiny-slider": "^2.9.3",
@@ -54,12 +58,14 @@
     "toastify-js": "^1.9.3",
     "tom-select": "^2.1.0",
     "typescript": "^4.7.4",
+    "vanilla-masker": "^1.2.0",
     "xlsx": "^0.16.9",
     "yup": "^0.32.11",
     "zoom-vanilla.js": "^2.0.6"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.1",
+    "@types/react-input-mask": "^3.0.1",
     "@types/toastify-js": "^1.11.1",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "10.4.6",
