--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nookies": "^2.5.2",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.33.1",
     "react-hot-toast": "^2.3.0",
