--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/tabulator-tables": "^5.2.0",
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
     "axios": "^0.27.2",
     "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
