--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^0.27.2",
     "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
+    "currency.js": "^2.0.4",
     "dayjs": "^1.10.4",
     "dropzone": "^5.7.6",
     "highlight.js": "^10.6.0",
@@ -68,6 +69,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.1",
+    "@types/dinero.js": "^1.9.0",
     "@types/react-input-mask": "^3.0.1",
     "@types/toastify-js": "^1.11.1",
     "@vitejs/plugin-react": "^1.3.0",
