--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "classnames": "^2.3.1",
     "currency.js": "^2.0.4",
     "dayjs": "^1.10.4",
+    "dotenv": "^16.0.3",
     "dropzone": "^5.7.6",
     "highlight.js": "^10.6.0",
     "js-beautify": "^1.13.5",
