--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.33.1",
     "react-hot-toast": "^2.3.0",
+    "react-icons": "^4.6.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "5.3.3",
     "react-select": "^5.4.0",
