--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fullcalendar/timegrid": "^5.5.1",
     "@googlemaps/js-api-loader": "^1.11.4",
     "@googlemaps/markerclustererplus": "^1.1.0",
+    "@heroicons/react": "^2.0.13",
     "@hookform/resolvers": "^2.8.8",
     "@left4code/tw-starter": "^3.1.35",
     "@popperjs/core": "^2.7.0",
@@ -27,7 +28,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
-    "@types/tabulator-tables": "^5.2.0",
+    "@types/tabulator-tables": "^5.4.1",
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^0.27.2",
@@ -45,20 +46,21 @@
     "nookies": "^2.5.2",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
-    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.33.1",
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.6.0",
     "react-input-mask": "^2.0.4",
+    "react-paginate": "^8.1.4",
     "react-router-dom": "5.3.3",
     "react-select": "^5.4.0",
+    "react-tabulator": "^0.18.1",
     "react-toastify": "^9.0.7",
     "react-transition-group": "^4.4.2",
     "recoil": "^0.7.0",
     "remask": "^0.1.0-alpha.5",
     "simplebar": "^5.3.6",
-    "tabulator-tables": "^4.9.3",
+    "tabulator-tables": "^5.4.2",
     "tiny-slider": "^2.9.3",
     "tippy.js": "^6.2.7",
     "toastify-js": "^1.9.3",
@@ -82,5 +84,8 @@
     "postcss-import": "^14.0.2",
     "tailwindcss": "^3.0.24",
     "vite": "^2.7.2"
+  },
+  "resolutions": {
+    "tabulator-tables": "^5.4.2"
   }
 }
