--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ckeditor/ckeditor5-build-classic": "^29.1.0",
     "@ckeditor/ckeditor5-build-decoupled-document": "^29.1.0",
     "@ckeditor/ckeditor5-build-inline": "^29.1.0",
+    "@emotion/styled": "^11.10.5",
     "@fullcalendar/core": "^5.5.1",
     "@fullcalendar/daygrid": "^5.5.0",
     "@fullcalendar/interaction": "^5.5.0",
@@ -22,7 +23,11 @@
     "@heroicons/react": "^2.0.13",
     "@hookform/resolvers": "^2.8.8",
     "@left4code/tw-starter": "^3.1.35",
+    "@mui/material": "^5.10.14",
+    "@mui/x-data-grid": "^5.17.12",
+    "@mui/x-data-grid-premium": "^5.17.12",
     "@popperjs/core": "^2.7.0",
+    "@tanstack/react-table": "^8.5.30",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.7.1",
     "@types/react": "^18.0.17",
@@ -44,9 +49,12 @@
     "lucide": "^0.17.2",
     "lucide-react": "^0.37.0",
     "nookies": "^2.5.2",
+    "or": "^0.2.0",
     "prop-types": "^15.8.1",
+    "qs": "^6.11.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-error-overlay": "^6.0.11",
     "react-hook-form": "^7.33.1",
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.6.0",
@@ -55,6 +63,7 @@
     "react-router-dom": "5.3.3",
     "react-select": "^5.4.0",
     "react-tabulator": "^0.18.1",
+    "react-tailwind-table": "^1.1.1",
     "react-toastify": "^9.0.7",
     "react-transition-group": "^4.4.2",
     "recoil": "^0.7.0",
@@ -74,6 +83,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.1",
     "@types/dinero.js": "^1.9.0",
+    "@types/qs": "^6.9.7",
     "@types/react-input-mask": "^3.0.1",
     "@types/toastify-js": "^1.11.1",
     "@vitejs/plugin-react": "^1.3.0",
@@ -84,8 +94,5 @@
     "postcss-import": "^14.0.2",
     "tailwindcss": "^3.0.24",
     "vite": "^2.7.2"
-  },
-  "resolutions": {
-    "tabulator-tables": "^5.4.2"
   }
 }
