--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
     "currency.js": "^2.0.4",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.10.4",
     "dotenv": "^16.0.3",
     "dropzone": "^5.7.6",
@@ -53,6 +54,8 @@
     "prop-types": "^15.8.1",
     "qs": "^6.11.0",
     "react": "^18.0.0",
+    "react-datepicker": "^4.8.0",
+    "react-day-picker": "^8.3.7",
     "react-dom": "^18.0.0",
     "react-error-overlay": "^6.0.11",
     "react-hook-form": "^7.33.1",
@@ -84,6 +87,7 @@
     "@tailwindcss/forms": "^0.5.1",
     "@types/dinero.js": "^1.9.0",
     "@types/qs": "^6.9.7",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-input-mask": "^3.0.1",
     "@types/toastify-js": "^1.11.1",
     "@vitejs/plugin-react": "^1.3.0",
