melhorias combo de clientes

--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
     "react-paginate": "^8.1.4",
     "react-router-dom": "5.3.3",
     "react-select": "^5.4.0",
+    "react-selectize": "^3.0.1",
     "react-tabulator": "^0.18.1",
     "react-tailwind-table": "^1.1.1",
+    "react-tailwindcss-select": "^1.6.0",
     "react-toastify": "^9.0.7",
     "react-transition-group": "^4.4.2",
     "recoil": "^0.7.0",
