--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "prop-types": "^15.8.1",
     "qs": "^6.11.0",
     "react": "^18.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.8.0",
     "react-day-picker": "^8.3.7",
     "react-dom": "^18.0.0",
@@ -89,6 +90,7 @@
     "@tailwindcss/forms": "^0.5.1",
     "@types/dinero.js": "^1.9.0",
     "@types/qs": "^6.9.7",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-input-mask": "^3.0.1",
     "@types/toastify-js": "^1.11.1",
